--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,1 +1,5 @@
-<h1><%= @machine.location %> Vending Machine</h1>
+<h1>Vending Machine: <%= @machine.location %></h1>
+
+<% @machine.snacks.each do |snack| %>
+  <p id="snacks-<%= snack.id %>"><%= snack.name %>: $<%= snack.price %></p>
+<% end %>
